<resources>

    <string name="google_maps_api_key" translatable="false">AIzaSyDkw32e4ITS7RP9A0A1HQCnxKGP7CUGzbc</string>
    <string name="app_name">The Weather</string>
    <string name="open">Open Navigation Drawer</string>
    <string name="close">Close Navigation Drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="city_name">cityName</string>
    <string name="the_weather_today">The weather today:</string>
    <string name="the_weather_another_days">The weather next days:</string>
    <string name="Setting">Setting</string>
    <string name="Location">Location:</string>
    <string name="units">Units:</string>
    <string name="temperature">Temperature:</string>
    <string name="windspeed">Wind Speed:</string>
    <string name="language">Language:</string>
    <string name="Kelvin">Kelvin</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="meter_sec">Meter/sec</string>
    <string name="miles_hour">Miles/hour</string>
    <string name="Arabic">Arabic</string>
    <string name="English">English</string>
    <string name="GPS">GPS</string>
    <string name="MAP">MAP</string>
    <string name="Home">Home</string>
    <string name="Favourite">Favourite</string>
    <string name="Alert">Alert</string>
    <string name="hPa">hPa</string>
    <string name="add_to_faviourt_locations">Favourite location</string>
    <string name="set_as_my_location">My location</string>
    <string name="pick_place_then_choose">Pick place,then choose to set as:</string>
    <string name="Not_selected_place_yet"> Not selected place yet </string>
    <string name="added_as_your_current_location">Added as your current location</string>
    <string name="remove">Remove</string>
    <string name="alerts">Alerts</string>
    <string name="meter_sec_default">meter/sec</string>
    <string name="alert_start_time">Time</string>
    <string name="data_alert">Day</string>
    <string name="type_of_alarm">Alarm Setting:</string>
    <string name="notification">Notification</string>
    <string name="alarm">Alarm</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="conformation">Conformation</string>
    <string name="are_your_stop_the_alarms">Are you sure? Do you want to stop the alarms?</string>
    <string name="are_your_stop_the_notifications">Are you sure? Do you want to stop the Notifications?</string>
    <string name="sorry_can_not_get_them">Sorry Can not get them</string>
    <string name="stop">Stop</string>
    <string name="search">Search and Add to Favourite </string>
    <string name="add_alert">Add Alert</string>
    <string name="stop_alarm">Stop Alarms</string>
    <string name="stop_notification">Stop Notifications</string>

</resources>