<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn= "navigation_view">

   <group android:checkableBehavior="single">
       <item
           android:id="@+id/home"
           android:icon="@drawable/home"
           android:title="@string/Home" />
       <item
           android:id="@+id/fav"
           android:icon="@drawable/fav_icon"
           android:title="@string/Favourite" />
       <item
           android:id="@+id/alert"
           android:icon="@drawable/alart"
           android:title="@string/Alert" />
       <item
           android:id="@+id/setting"
           android:icon="@drawable/setting"
           android:title="@string/Setting" />
   </group>

</menu>