<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settingLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".setting.SettingFragment" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/Setting"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:textSize="18dp"
        android:textStyle="bold"
        android:layout_marginTop="28dp"
        android:text="@string/Location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />
    <RadioGroup
        android:id="@+id/radioGroupLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        >

        <RadioButton
            android:id="@+id/gpsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/GPS"
            android:checked="true"
            android:textSize="15dp" />

        <RadioButton
            android:id="@+id/map_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/MAP"
            android:textSize="15dp" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/units"
        android:textSize="18dp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupLanguage" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="17dp"
        android:textStyle="bold"
        android:text="@string/temperature"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <RadioGroup
        android:id="@+id/radioGroupTemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <RadioButton
            android:id="@+id/btn_Kelvin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Kelvin"
            android:checked="true"
            android:textSize="15dp" />

        <RadioButton
            android:id="@+id/btn_Celsius"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/celsius"
            android:textSize="15dp" />

        <RadioButton
            android:id="@+id/btn_Fahrenheit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/fahrenheit" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/windspeed"
        android:textStyle="bold"
        android:textSize="17dp"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupTemperature" />

    <RadioGroup
        android:id="@+id/radioGroup_wind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6">

        <RadioButton
            android:id="@+id/btn_meter_sec"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/meter_sec"
            android:checked="true"
            android:textSize="15dp" />

        <RadioButton
            android:id="@+id/btn_miles_hour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/miles_hour"
            android:textSize="15dp" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/language"
        android:textSize="18dp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupLocation" />

    <RadioGroup
        android:id="@+id/radioGroupLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7">

        <RadioButton
            android:id="@+id/btn_Arabic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Arabic"
            android:textSize="15dp" />

        <RadioButton
            android:id="@+id/btn_English"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/English"
            android:checked="true"
            android:textSize="15dp" />
    </RadioGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>